FE-7: fix bg on mobile

--- a/src/assets/scss/components/_products.scss
+++ b/src/assets/scss/components/_products.scss
@@ -1,6 +1,4 @@
 .products-wrapper{
-  padding-top: 20px;
-  padding-bottom: 20px;
   position: relative;
 
   box-shadow: 0px -3px 44px rgba(0, 0, 0, 0.25);
@@ -27,6 +25,10 @@
 }
 
 .products{
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  overflow: hidden;
 }
 
 .products__title {
